--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 clap = { version = "4.0", features = ["derive"] }
 log = { version = "0.4.22", features = [] }
 env_logger = "0.11.5"
+
+[dev-dependencies]
+stringreader = "0.1.1"
